# spose-py

./: .gitignore  CLAUDE.md  PLAN.md  README.md
.claude/: settings.local.json
cache/: results_trained.json  spose_embedding_trained.txt  spose_embedding_trained_sorted.txt
data/: .gitignore
notebooks/: 00_overview.ipynb  ext_fig1_reproducibility.ipynb  ext_fig2_all_dimension_clouds.ipynb  fig1_similarity_overview.ipynb  fig2_prediction.ipynb  fig3_dimension_examples.ipynb  fig4_crystal_map.ipynb  fig5_crystal_closeups.ipynb  fig6_ablation.ipynb  fig7_typicality.ipynb  fig8_human_ratings.ipynb
osfstorage-archive/: LICENSE.txt  README.txt  make_figures_behavsim.m
python/: .gitignore  PLAN.md  (+3 more)
src/: PLAN.md  README.md  pyproject.toml
src/notebooks/: 00_overview.ipynb  ext_fig1_reproducibility.ipynb  ext_fig2_all_dimension_clouds.ipynb  fig1_similarity_overview.ipynb  fig2_prediction.ipynb  fig3_dimension_examples.ipynb  fig4_crystal_map.ipynb  fig5_crystal_closeups.ipynb  fig6_ablation.ipynb  fig7_typicality.ipynb  fig8_human_ratings.ipynb
src/scripts/: build_cache.py  render_figures.py  train_spose.py  verify_parity.py
src/scripts/slurm/: build_cache.sbatch  run_analyses.sbatch
src/things_spose/: __init__.py
src/things_spose/analysis/: analyses.py  classify.py  clustering.py  dimlabels.py  reproducibility.py  similarity.py  tsne.py  viz.py
src/things_spose/core/: __init__.py  _numba_kernels.py  artifacts.py  external_fdr.py  paths.py
src/things_spose/data/: __init__.py  sampling.py
src/things_spose/training/: __init__.py  checkpoint.py  train.py
(+47 files in other folders)
