[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "things-spose"
version = "0.1.0"
description = "Python port of the SPoSE analyses from Hebart et al. (2020), Nature Human Behaviour"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "pandas>=2.0",
    "scikit-learn>=1.3",
    "matplotlib>=3.7",
]

[project.optional-dependencies]
# Runtime acceleration and visualisation extras (see requirements.txt).
accel = ["numba>=0.58", "joblib>=1.3", "torch>=2.0"]
viz = ["wordcloud>=1.9"]
notebooks = ["jupyter>=1.0", "ipykernel>=6.0", "nbformat>=5.9", "papermill>=2.4"]

[tool.setuptools]
packages = [
    "things_spose",
    "things_spose.core",
    "things_spose.data",
    "things_spose.training",
    "things_spose.analysis",
]
